--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.0.0",
-    "react-native": "0.69.4"
+    "react-native": "0.69.4",
+    "react-native-reanimated": "^2.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
